--- a/ITZWebClientApp/wwwroot/index.html
+++ b/ITZWebClientApp/wwwroot/index.html
@@ -28,14 +28,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ForgeViewerClient</title>
+    <title>ITZ WebSite App</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <!--<link href="css/site.css" rel="stylesheet" />-->
     <link href="css/forgeViewer.css" rel="stylesheet" />
 
+    
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/6.*/style.min.css" type="text/css">
+
+
 
     <!--GOLDEN LAYOUT-->
     <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -49,16 +53,18 @@
 
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/6.*/viewer3D.min.js"></script>
     <script src="lib/chartjs/Chart.bundle.min.js"></script>
-    <script src="lib/colorthief/color-thief.js"></script>
+    <!--<script src="lib/colorthief/color-thief.js"></script>-->
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="scripts/forge.js"></script>
-    <script src="scripts/charts.js"></script>
-    <script src="scripts/tableExpander.js"></script>
-    <script src="scripts/dragableElement.js"></script>
+    <script src="js/forge.js"></script>
+    <script src="js/charts.js"></script>
+    <script src="js/tableExpander.js"></script>
+    <script src="js/dragableElement.js"></script>
 
 
-    <script src="scripts/file.js"></script>
+        <script src="scripts/file.js"></script>
+
+
     <!--<script src="scripts/customFunctions.js"></script>-->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
