--- a/ITZWebClientApp/wwwroot/index.html
+++ b/ITZWebClientApp/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ITZ WebSite App</title>
+    <title>HIGR WebSite App</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site_flex.css" rel="stylesheet" />
@@ -12,14 +12,18 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/6.*/style.min.css" type="text/css">
-    <!--GOLDEN LAYOUT-->
-    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
-    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />-->
+
+    <link href="lib/jsgantt/jsgantt.css" rel="stylesheet" type="text/css" />
+    
+
 </head>
 <body>
-    <app>Loading...</app>
+    <app>
+        <div style="display:flex; justify-content:center; align-items:center; height:100vh; width:100vw; font-size:larger">
+            Loading App...
+        </div>
+
+    </app>
 
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/6.*/viewer3D.min.js"></script>
     <script src="lib/chartjs/Chart.bundle.min.js"></script>
@@ -28,6 +32,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <script src="lib/jsgantt/jsgantt.js" type="text/javascript"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/forge.js"></script>
@@ -35,14 +40,13 @@
     <script src="js/tableExpander.js"></script>
     <script src="js/dragableElement.js"></script>
     <script src="js/site.js"></script>
+    <script src="js/file.js"></script>
 
 
-    <script src="scripts/file.js"></script>
-    <script src="scripts/softwareChart.js"></script>
-
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="js/gglGanttChart.js"></script>
     <!--<script src="scripts/customFunctions.js"></script>-->
-
-
+    <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
 
 </body>
 </html>
