--- a/ITZWebClientApp/wwwroot/projectInfo/NAICM.html
+++ b/ITZWebClientApp/wwwroot/projectInfo/NAICM.html
@@ -1,50 +1,4 @@
-﻿<!--<style>
-    video {
-        width: 100%;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
-    p {
-        text-indent: 35px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    div {
-        text-align: justify;
-        /*        text-align-last:left;*/
-    }
-
-    p::first-letter {
-        font-size: x-large;
-    }
-
-    img {
-        width: 100%;
-    }
-
-    ol {
-        list-style: none;
-        counter-reset: my-awesome-counter;
-    }
-
-        ol li {
-            counter-increment: my-awesome-counter;
-        }
-
-            ol li::before {
-                content: counter(my-awesome-counter) ". ";
-                color: blue;
-                font-weight: bold;
-            }
-
-    li {
-        margin: 5px;
-    }
-</style>-->
-
-<div class="container">
+﻿<div class="container">
     <p>Participe en el proyecto de modelo de despiece de acero de refuerzo en las losas de la terminal de NAICM. </p>
     <p>
         Este proyecto tenía un gran reto desde el punto de vista técnico del software utilizado que era Revit, debido a que se necesitaban que el modelo tuviera los despieces adecuados y su correcta enumeración. A pesar de que las parillas geométricamente son ortogonales, el número de despieces que se generan al llegar a sus bordes se disparan provocando que se generen despieces varilla por varilla. El trabajo todavía incrementa de forma muy significativa si existiese algún cambio geométrico en la longitud de despiece o la ubicación de sus arranques, ya que provocaría que todas losas que estuviesen juntas sobre un mismo nivel estuvieran mal provocando que el proceso se vuelva a repetir prácticamente desde cero.
@@ -85,7 +39,7 @@
                 <li>
                     <b>Consecutivo.</b> El consecutivo individual por varilla o miembro dentro de un mismo grupo de un extremo al otro.
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" controls name="media">
                             <source src="https://www.dropbox.com/s/jy1a5lqnf8zxc4w/NAICM_Apps.mp4?raw=1" type="audio/mp4" /> />
                         </video>
                     </div>
@@ -106,7 +60,7 @@
                 <li>
                     <b>Rotulación de Referencia de planos en cuadro de datos</b>
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" controls name="media">
                             <source src="https://www.dropbox.com/s/89eadflrz8yzlc7/NAICM_Demo.mp4?raw=1" type="audio/mp4" /> />
                         </video>
                     </div>
@@ -119,7 +73,7 @@
                 <li>
                     Cortado de varilla con traslape incluido.
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" controls name="media">
                             <source src="https://www.dropbox.com/s/hrdu7alkvp45kid/NAICM_Apps%20ARTranslape.mp4?raw=1" type="audio/mp4" /> />
                         </video>
                     </div>
@@ -127,7 +81,7 @@
                 <li>
                     Pre colocación de bastones.
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" controls name="media">
                             <source src="https://www.dropbox.com/s/cqb2ymv90mlhawq/NAICM_Apps%20Bastones.mp4?raw=1" type="audio/mp4" /> />
                         </video>
                     </div>
