--- a/ITZWebClientApp/wwwroot/index.html
+++ b/ITZWebClientApp/wwwroot/index.html
@@ -11,7 +11,7 @@
     <!--<link href="css/forgeViewer.css" rel="stylesheet" />-->
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/6.*/style.min.css" type="text/css">
+    <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css">
 
     <link href="lib/jsgantt/jsgantt.css" rel="stylesheet" type="text/css" />
     
@@ -25,7 +25,7 @@
 
     </app>
 
-    <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/6.*/viewer3D.min.js"></script>
+    <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
     <script src="lib/chartjs/Chart.bundle.min.js"></script>
     <!--<script src="lib/colorthief/color-thief.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -33,8 +33,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script src="lib/jsgantt/jsgantt.js" type="text/javascript"></script>
-
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script src="js/forge_extensions.js"></script>
     <script src="js/forge.js"></script>
     <script src="js/charts.js"></script>
     <script src="js/tableExpander.js"></script>
